MDEV-14611 ALTER TABLE EXCHANGE PARTITION does not work properly when used with DATA DIRECTORY.

When table is renamed, the InnoDB's dictionary cache didn't change
        the ib_table->data_dir_path accordingly.
        Now it's set to NULL.