storage/innobase/row/row0mysql.cc
@@ -4923,6 +4923,7 @@ end:
 					DICT_ERR_IGNORE_NONE);
 			fk_tables.pop_front();
 		}
+                table->data_dir_path= NULL;
 	}
 
 funct_exit:
